--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,12 +1,13 @@
+<% provide(:title, "Home") %>
 <div class="center hero-unit">
 	<h1>Welcome to Skimmatic!</h1>
 
 	<div class="container-fluid">
 		<div class="row-fluid">
 			<div class="span4>
-				<h2>TRY</h2>
-				<h2>ME</h2>
-				<%= link_to "Try Me!", tryme_path, class: "btn btn-large btn-primary" %>			</div>
+				<h2>Try me!</h2>
+				<%= link_to "Test 1", test1pre_path, class: "btn btn-large btn-primary" %>			</div>
+				<%= link_to "Test 2", test2pre_path, class: "btn btn-large btn-primary" %>			</div>
 			</div>
 		</div>
 	</div>
