Fix static pages, embed Google viewer after uploading docs to Google Sites (maaad hacky)

--- a/app/views/static_pages/test1pre.html.erb
+++ b/app/views/static_pages/test1pre.html.erb
@@ -3,15 +3,14 @@
   <div class="row">
 	<h1>Welcome to Skimmatic!</h1>
 	
-	<div class="row">
-	
-		<p>
-		  <iframe src="academic procrastination original.pdf" style="width:718px; height:700px;" frameborder="0"></iframe>
-		</p>
-
+	<h2>Please read the paper, then click "Next"</h2>
+	<div class="row">	
+		<iframe src="https://docs.google.com/viewer?a=v&pid=sites&srcid=ZGVmYXVsdGRvbWFpbnxza2ltcGRmfGd4Ojc0MmY0MWM1ZjQzZDQ0Mzc" style="width:100%; height:800px;" frameborder="0"></iframe>
+	</div>
+	<div class="row center">
 		<%= link_to "Next", test1post_path, class: "btn btn-large btn-primary" %>			</div>
 	</div>
   </div>
 </div>
 
-#<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org' %>
+<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org' %>
