--- a/app/views/static_pages/test1qs.html.erb
+++ b/app/views/static_pages/test1qs.html.erb
@@ -6,11 +6,11 @@
 	<div class="row">
 	
 		<p>
-			<iframe src="https://docs.google.com/spreadsheet/embeddedform?formkey=dExocU5BejF1cVJUQkxtX1N2VXJkNmc6MQ" width="760" height="1478" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+			<iframe src="https://docs.google.com/spreadsheet/embeddedform?formkey=dExocU5BejF1cVJUQkxtX1N2VXJkNmc6MQ" width="100%" height="2200" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 		</p>
 
 	</div>
   </div>
 </div>
 
-#<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org' %>
+<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org' %>
