--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,11 +1,11 @@
 <footer class="footer">
 	<small>
-		(c)EduTainment, 2012
+		(c)Skimmatic, F+F 2012
 	</small>
 	<nav>
 		<ul>
-			<li><%= link_to "About",	about_path %></li>
-			<li><%= link_to "Contact",	contact_path %></li>
+			<li><%= link_to "Home",	root_path %></li>
+			<li><%= link_to "Tests",	tests_path %></li>
 			<li><a href="">News</a></li>
 		</ul>
 	</nav>
