--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,13 +4,17 @@
 
 	<div class="container-fluid">
 		<div class="row-fluid">
-			<div class="span4>
-				<h2>Try me!</h2>
-				<%= link_to "Test 1", test1pre_path, class: "btn btn-large btn-primary" %>			</div>
-				<%= link_to "Test 2", test2pre_path, class: "btn btn-large btn-primary" %>			</div>
+				<h2>Try me!</h2>	
+				<div class="row">
+					<%= link_to "Test 1", test1pre_path, class: "btn btn-large btn-primary" %>
+
+					<%= link_to "Test 2", test2pre_path, class: "btn btn-large btn-primary" %>
+				</div>
+				<br />
+				<h2>Choose one of the above buttons to start!</h2>
 			</div>
 		</div>
 	</div>
 </div>
 
-#<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org' %>
+<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org' %>
