--- a/app/views/static_pages/test2pre.html.erb
+++ b/app/views/static_pages/test2pre.html.erb
@@ -2,16 +2,15 @@
 <div class="container-fluid">
   <div class="row">
 	<h1>Welcome to Skimmatic!</h1>
+	<h2>Please read the paper, then click "Next"</h2>
 	
 	<div class="row">
-	
-		<p>
-		  <iframe src="Gopnik Wellman original.pdf" style="width:718px; height:700px;" frameborder="0"></iframe>
-		</p>
-
+		<iframe src="https://docs.google.com/viewer?a=v&pid=sites&srcid=ZGVmYXVsdGRvbWFpbnxza2ltcGRmfGd4OjFhNGM4YjA5NGMyNWQxY2M" style="width:100%; height:800px;" frameborder="0"></iframe>
+	</div>
+	<div class="row center">
 		<%= link_to "Next", test2post_path, class: "btn btn-large btn-primary" %>			</div>
 	</div>
   </div>
 </div>
 
-#<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org' %>
+<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org' %>
