--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,7 +4,7 @@
 	</small>
 	<nav>
 		<ul>
-			<li><%= link_to "Home",	root_path %></li>
+			<li><%= link_to "Home",	home_path %></li>
 			<li><%= link_to "Tests",	tests_path %></li>
 			<li><a href="">News</a></li>
 		</ul>
