--- a/app/views/static_pages/testQs.html.erb
+++ b/app/views/static_pages/testQs.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "Test 1 Questions") %>
+<% provide(:title, "Test Questions") %>
 <div class="container-fluid">
   <div class="row">
 	<h1>Welcome to Skimmatic!</h1>
