Final Project Commit - change header to Prototype 1, 2, 3 links

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,9 +4,10 @@
 			<%= link_to "Skimmatic", home_path, id: "logo" %>
 			<nav>
 				<ul class="nav pull-right">
-					<li><%= link_to "Home",		home_path %></li>
-					<li><%= link_to "Tests", 	tests_path %></li>
-					<li><%= link_to "About Us", 	about_path %></li>
+					<li><%= link_to "Skim Prototype 1",		home_path %></li>
+					<li><%= link_to "Skim Prototype 2", 	article_path(1) %></li>
+					<li><%= link_to "Collaboration Prototype", 	'https://docs.google.com/document/d/1C6CqPXV1Nn6EadEPzLydvq_dx2Krmif1Ktu0TzDSApU/edit' %></li>
+					<li><%= link_to "About Us", 	'https://t522.wikispaces.com/down-to-earth-monarchs' %></li>
 				</ul>
 			</nav>
 		</div>
