--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "Home") %>
+<% provide(:title, "Prototype1") %>
 <div class="center hero-unit">
 	<h1>Welcome to Skimmatic!</h1>
 
@@ -6,7 +6,7 @@
 		<div class="row-fluid">
 			<div class="span12">
 				<h2>This is what's happening here.</h2>
-				<h2>We are making skimming seamlessly fast by systematically summarizin-g the articles. (We draw most of our power from the American tendency of using a "Topic Sentence").</h2>
+				<h2>We are making skimming seamlessly fast by systematically summarizing the articles. (We draw most of our power from the American tendency of using a "Topic Sentence").</h2>
 				<h2>We give you a "skimsheet": a generated summary of the article.</h2>
 				<div class="row">
 					<div class="span6 offset3" align="left">
